# GalaxyAIOS

./: .gitignore  LICENSE  README.md  alembic.ini  main.py  requirements.txt
aios_runtime_setup/: setup_k8s_docker_nvidia.sh
aios_runtime_setup/k8s-gpu-service/: ipfs-service.yaml
aistack/api/: routes.py  users.py
aistack/cmd/: start.py
aistack/config/: config.py
aistack/data/: token
aistack/mixins/: active_record.py
aistack/schemas/: common.py
aistack/server/: db.py
api/: Dockerfile  Dockerfile.cluster  clean_images.py  requirements.txt
api/image-api/: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api/image-api/image_api/: __init__.py  logging.py  main.py
api/image-api/image_api/backends/: __init__.py  base.py  sd3.py
api/image-api/image_api/cmd/: __init__.py  start.py  version.py
api/image-api/image_api/config/: __init__.py  config.py
api/image-api/image_api/downloader/: __init__.py  hub.py
api/image-api/image_api/queue/: __init__.py  task_queue.py
api/image-api/image_api/server/: __init__.py  app.py  model.py  routers.py  server.py
api/image-api/image_api/utils/: __init__.py  gpu.py  image.py
api/image-api/tests/: __init__.py  test_api.py
deployment/: hermes-agent-service.json  hermes-agent-service.yaml  llm-llamacpp-service.json  llm-llamacpp-service.yaml  openclaw-deployment.json  openclaw-deployment.yaml
docker/: docker-compose.yaml  fluent-bit.conf  start.sh  stop.sh
k8s_docker_gpu_setup/: setup_k8s_docker_nvidia.sh
web/: Dockerfile  nginx.conf
(+127 files in other folders)
